[package]
name = "json-schema-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }

[lib]
name = "json_schema_generator"
path = "src/lib.rs"

[[bin]]
name = "json_schema_generator"
path = "src/main.rs"