[package]
name = "json-schema-generator"
version = "0.1.0"
edition = "2024"
authors = ["Anant Asthana <anant@datasecurity.expert>"]
description = "A tool to generate JSON Schema from JSON data"
license = "MIT"
repository = "https://github.com/AtlasPilotPuppyjson-schema-generator"
readme = "README.md"
keywords = ["json", "schema", "generator"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }

[lib]
name = "json_schema_generator"
path = "src/lib.rs"

[[bin]]
name = "json_schema_generator"
path = "src/main.rs"